2008-10-28  Ulrich Drepper  <drepper@redhat.com>

	* po/lt.po: Update from translation team.

2008-10-26  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: Update from translation team.

2008-10-24  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_query.c (__libc_res_nquery): Add a few casts.
	Fix tests for existence of second reply.

2008-10-23  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: New file.
	Contributed by the Indonesian translation team.

2008-10-22  Dmitry V. Levin  <ldv@altlinux.org>

	* misc/syslog.c (openlog_internal): Fix __have_sock_cloexec
	initialization.

2008-10-17  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile: Add rules to build and run tst-tls17.
	* elf/tst-tls17.c: New test.
	* elf/tst-tlsmod17a.c: New file.
	* elf/tst-tlsmod17b.c: Likewise.

2008-10-17  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/divmod_1.c: Use correct type for dummy variable.
	* stdlib/mod_1.c: Likewise.

2008-10-16  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-tls.c (_dl_update_slotinfo): Copy all of the initial DTV.

2008-10-16  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sys/signalfd.h (signalfd): Fix __THROW vs.
	__nonnull order for C++.
	* sysdeps/unix/sysv/linux/alpha/sys/signalfd.h (signalfd): Likewise.
	* sysdeps/unix/sysv/linux/sparc/sys/signalfd.h (signalfd): Likewise.

2008-10-01  Daniel Jacobowitz  <dan@codesourcery.com>

	* stdlib/longlong.h: Update from GCC.

2008-10-09  Jakub Jelinek <jakub@redhat.com>
	    David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc64/sparcv9v/memcpy.S: When not USE_BPR,
	make sure any registers used with 64-bit 'branch-on-register'
	instructions have their top 32-bits clear.
	* sysdeps/sparc/sparc64/sparcv9v/memset.S: Likewise.
	* sysdeps/sparc/sparc64/sparcv9v2/memcpy.S: Likewise.

2008-09-18  Andreas Schwab  <schwab@suse.de>

	[BZ #6942]
	* resolv/res_send.c (send_vc): Fix use of unaligned address.
        Properly handle partial reads.
